# lang2

./: .gitignore  new-note  new-plan  notes  stack.yaml
abstract-machine-lib/: abstract-machine-lib.cabal
abstract-machine-lib/src/AbstractMachine/: Common.hs  Cps.hs  Direct.hs
compiler-cli/: compiler-cli.cabal
compiler-cli/src/: Main.hs
compiler-explorer/: compiler-explorer.cabal
compiler-explorer-frontend/: package.json
compiler-explorer-frontend/public/: index.html
compiler-explorer-frontend/src/: App.css  App.js  index.css  index.js
compiler-explorer-lib/: compiler-explorer-lib.cabal
compiler-explorer-lib/src/: Controller.hs
compiler-explorer-lib/src/BetterPretty/: Pretty.hs  PrettyExpr.hs  PrettyFunDefn.hs  PrettyModule.hs  PrettyOp.hs  PrettyTerm.hs  UglyModule.hs
compiler-explorer-lib/src/Pretty/: Anf.hs  Anf2.hs  AnfModule.hs  Common.hs  Definition.hs  Direct.hs  Expression.hs  Module.hs  Operator.hs  Printer.hs  Term.hs  Type.hs  TypedExpression.hs  TypedModule.hs
compiler-explorer-lib/src/Service/: Controller.hs  ProgramState.hs  Service.hs
compiler-explorer/src/: Main.hs
compiler-lib/: compiler-lib.cabal
compiler-lib/src/Common/: CallGraph.hs  EitherT.hs  Graph.hs  ReaderT.hs  State.hs  StateT.hs  Trans.hs  Writer.hs
compiler-lib/src/Core/: Definition.hs  Expression.hs  Module.hs  Operator.hs  Term.hs  Types.hs
compiler-lib/src/Cps/: Cps.hs  CpsTyped.hs  PreCps.hs
compiler-lib/src/FreeVars/: FreeVars.hs
compiler-lib/src/Optimise/: Alpha.hs
compiler-lib/src/Parse/: ByteString.hs  Combinator.hs  Definition.hs  Expression.hs  ExpressionParser.hs  LexAndParse.hs  LexState.hs  Lexer.hs  Module.hs  Parser.hs  Primitives.hs  Token.hs
compiler-lib/src/Parse2/: ByteString.hs  Definition.hs  Expression.hs  Lexer2.hs  Parse2.hs  Token2.hs
compiler-lib/src/Phase/: ClosureConvert.hs  ClosureConvertTyped.hs  Cps.hs  DiscardTypes.hs  DropTypes.hs  EtaExpand.hs  LambdaLift.hs  Saturate.hs
compiler-lib/src/Phase/Anf/: Anf.hs  AnfExpression.hs  AnfModule.hs  AnfTransform.hs  BetaReduce.hs
compiler-lib/src/Phase/ClosureConvert/: ClosureConvert.hs  FreeVars.hs
compiler-lib/src/Phase/CodeGen/: CodeGen.hs  CodeGen0.hs  CodeGen1.hs  CodeGen2.hs  CodeGenA.hs  CodeGenB.hs  CodeGenC.hs  CodeGenD.hs  CodeGenDUtil.hs  Direct.hs  SizeInfo.hs  TagInfo.hs  TypesA.hs  TypesC.hs  TypesD.hs  Val.hs
compiler-lib/src/Phase/EtaExpand/: EtaExpand.hs  EtaSaturate.hs
compiler-lib/src/Phase/LambdaLift/: Alpha.hs  LambdaLift.hs
compiler-lib/src/Phase/Unclobber/: UnclobberRecursiveRegisters.hs
compiler-lib/src/Phase/Uncurry/: Uncurry.hs
compiler-lib/src/TypeCheck/: CallGraph.hs  ConstraintSolver.hs  NewTypeCheck.hs  TypeCheck.hs  TypeCheckTypes.hs  TypeInference.hs  TypeInference2.hs  TypedExpression.hs  Types.hs  _TypeInference.hs
compiler-lib/src/TypeSystem/: Common.hs  Ftv.hs  InferExpression.hs  InferOperator.hs  InferTerm.hs  TypeCheck.hs  TypesCallGraph.hs
compiler-lib/test/: Tests.hs
compiler-lib/test/Common/: CallGraphTest.hs  GraphTest.hs  Identity.hs  TransTest.hs
compiler-lib/test/Parse/: ByteStringTest.hs  ExpressionTest.hs  LexAndParseTest.hs  LexerTest.hs  ParserTest.hs
compiler-lib/test/Parse2/: ByteStringTest.hs  Lexer2Test.hs
compiler-lib/test/Phase/: EtaExpandTest.hs
compiler-lib/test/Phase/ClosureConvert/: FreeVarsTest.hs
compiler-lib/test/Phase/CodeGen/: CodeGenDLifetimeTest.hs
compiler-lib/test/TypeCheck/: CallGraphTest.hs  TypeCheckTest.hs  TypesCallGraphTest.hs
examples/: badfibs  closure  pair  reenter  sum-of-squares  summorial
runtimes/: runtimes.cabal
runtimes/src/Runtimes/: AbstractMachine.hs  CeskMachine.hs  CeskMachine2.hs  DirectMachine.hs  Machine0.hs  Machine1.hs  Machine2.hs  MachineA.hs  MachineC.hs  MachineD.hs  Semantics.hs
runtimes/test/: Tests.hs
runtimes/test/Runtimes/: MachineATest.hs
