cabal-version:       2.4
name:                compiler-cli
version:             0.1.0.0
license-file:        LICENSE
author:              John Haynes
maintainer:          john.andrew.haynes@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable compiler-cli
  build-depends:    base,
                    compiler-lib
  ghc-options:      -Wall -O2
  hs-source-dirs:   src
  main-is:          Main.hs
  default-language: Haskell2010
