cabal-version:       2.4
name:                compiler-explorer-lib
version:             0.1.0.0
license-file:        LICENSE
author:              John Haynes
maintainer:          john.andrew.haynes@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  build-depends:    aeson,
                    base,
                    bytestring,
                    compiler-lib,
                    containers,
                    runtimes,
                    servant-server,
                    text,
                    text-builder,
                    vector,
                    wai-cors,
                    warp
  exposed-modules:  Pretty.AnfModule
                    Pretty.Anf2
                    Pretty.Common
                    Pretty.Expression
                    Pretty.Module
                    Pretty.Operator
                    Pretty.Term
                    Pretty.Type
                    Pretty.TypedModule
                    Service.Controller
                    Service.ProgramState
                    Service.Service
  ghc-options:      -Wall -O2
  hs-source-dirs:   src
  default-language: Haskell2010
