cabal-version:       2.4
name:                compiler-explorer
version:             0.1.0.0
license-file:        LICENSE
author:              John Haynes
maintainer:          john.andrew.haynes@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable compiler-explorer
  build-depends:    base,
                    compiler-lib,
                    compiler-explorer-lib
  ghc-options:      -Wall -O2
  main-is:          Main.hs
  hs-source-dirs:   src
  default-language: Haskell2010
