cabal-version:       2.4
name:                compiler-lib
version:             0.1.0.0
license-file:        LICENSE
author:              John Haynes
maintainer:          john.andrew.haynes@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  build-depends:    base,
                    bytestring,
                    containers,
                    vector,
                    vector-builder
  exposed-modules:  Common.CallGraph
                    Common.State
                    Core.Expression
                    Core.Module
                    Core.Operator
                    Core.Term
                    Core.Types
                    Parse.Expression
                    Parse.LexAndParse
                    Parse.Lexer
                    Parse.Module
                    Parse.Parser
                    Parse.Token
                    Phase.EtaExpand
                    TypeCheck.ConstraintSolver
                    TypeSystem.Common
                    TypeSystem.Ftv
                    TypeSystem.InferExpression
                    TypeSystem.InferOperator
                    TypeSystem.InferTerm
                    TypeSystem.TypeCheck
  ghc-options:      -Wall -O2
  hs-source-dirs:   src
  default-language: Haskell2010

test-suite test-compiler-lib
    build-depends:    bytestring,
                      compiler-lib
    ghc-options:      -Wall -O2
    other-modules:    Common.CallGraphTest
                      Parse.ExpressionTest
                      Parse.LexerTest
                      Parse.LexAndParseTest
                      Phase.EtaExpandTest
                      TypeCheck.TypeCheckTest
    type:             exitcode-stdio-1.0
    main-is:          Tests.hs
    build-depends:    base, containers, hedgehog, vector
    hs-source-dirs:   test
    default-language: Haskell2010
