cabal-version:       2.4
name:                compiler-lib
version:             0.1.0.0
license-file:        LICENSE
author:              John Haynes
maintainer:          john.andrew.haynes@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  build-depends:    base,
                    bytestring,
                    containers,
                    vector,
                    vector-builder
  exposed-modules:  Common.CallGraph
                    Common.EitherT
                    Common.State
                    Common.StateT
                    Common.Trans
                    Common.Writer
                    Core.Expression
                    Core.Module
                    Core.Operator
                    Core.Term
                    Core.Types
                    Parse.Expression
                    Parse.LexAndParse
                    Parse.Lexer
                    Parse.Module
                    Parse.Parser
                    Parse.Token
                    Phase.Anf.AnfExpression
                    Phase.Anf.AnfModule
                    Phase.Anf.BetaReduce
                    Phase.CodeGen.CodeGenA
                    Phase.CodeGen.SizeInfo
                    Phase.CodeGen.TagInfo
                    Phase.CodeGen.TypesA
                    Phase.CodeGen.Val
                    Phase.ClosureConvert.ClosureConvert
                    Phase.ClosureConvert.FreeVars
                    Phase.EtaExpand.EtaExpand
                    Phase.EtaExpand.EtaSaturate
                    Phase.LambdaLift.Alpha
                    Phase.LambdaLift.LambdaLift
                    Phase.Uncurry.Uncurry
                    TypeCheck.ConstraintSolver
                    TypeSystem.Common
                    TypeSystem.InferExpression
                    TypeSystem.InferOperator
                    TypeSystem.InferTerm
                    TypeSystem.TypeCheck
  ghc-options:      -Wall -O2
  hs-source-dirs:   src
  default-language: Haskell2010

test-suite test-compiler-lib
    build-depends:    bytestring,
                      compiler-lib
    ghc-options:      -Wall -O2
    other-modules:    Common.CallGraphTest
                      Common.Identity
                      Common.TransTest
                      Parse.ExpressionTest
                      Parse.LexerTest
                      Parse.LexAndParseTest
                      Phase.ClosureConvert.FreeVarsTest
                      Phase.EtaExpandTest
                      TypeCheck.TypeCheckTest
    type:             exitcode-stdio-1.0
    main-is:          Tests.hs
    build-depends:    base, containers, hedgehog, vector
    hs-source-dirs:   test
    default-language: Haskell2010
