cabal-version:       2.4
name:                runtimes
version:             0.1.0.0
license-file:        LICENSE
author:              John Haynes
maintainer:          john.andrew.haynes@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  build-depends:    base,
                    bytestring,
                    cereal,
                    containers,
                    compiler-lib,
                    unliftio,
                    vector
  exposed-modules:  Runtimes.AbstractMachine
                    Runtimes.Machine1
                    Runtimes.Machine2
  ghc-options:      -Wall -O2
  hs-source-dirs:   src
  default-language: Haskell2010
