cabal-version:       2.4
name:                runtimes
version:             0.1.0.0
license-file:        LICENSE
author:              John Haynes
maintainer:          john.andrew.haynes@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  build-depends:    base,
                    bytestring,
                    containers,
                    compiler-lib,
                    vector
  exposed-modules:  Runtimes.MachineA
                    Runtimes.MachineC
  ghc-options:      -Wall -O2
  hs-source-dirs:   src
  default-language: Haskell2010

test-suite test-runtimes
    build-depends:    bytestring,
                      runtimes
    ghc-options:      -Wall -O2
    other-modules:    Runtimes.MachineATest
    type:             exitcode-stdio-1.0
    main-is:          Tests.hs
    build-depends:    base, containers, hedgehog, vector
    hs-source-dirs:   test
    default-language: Haskell2010
